update the default time ranges

--- a/public/app/plugins/datasource/azuremonitor/dashboards/appInsightsFailureOperations.json
+++ b/public/app/plugins/datasource/azuremonitor/dashboards/appInsightsFailureOperations.json
@@ -1782,8 +1782,8 @@
     ]
   },
   "time": {
-    "from": "now-45m",
-    "to": "now-15m"
+    "from": "now-30m",
+    "to": "now"
   },
   "timepicker": {},
   "timezone": "",
