--- a/public/app/plugins/datasource/azuremonitor/dashboards/appInsightsFailureDependencies.json
+++ b/public/app/plugins/datasource/azuremonitor/dashboards/appInsightsFailureDependencies.json
@@ -1616,8 +1616,8 @@
     ]
   },
   "time": {
-    "from": "now-45m",
-    "to": "now-15m"
+    "from": "now-30m",
+    "to": "now"
   },
   "timepicker": {},
   "timezone": "utc",
