Do not run workflow on forks
Signed-off-by: Jack Baldry <jack.baldry@grafana.com>

--- a/.github/workflows/update-make-docs.yml
+++ b/.github/workflows/update-make-docs.yml
@@ -4,13 +4,13 @@ on:
     - cron: '0 7 * * 1-5'
 jobs:
   main:
+    if: github.repository == 'grafana/grafana'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Update procedure
-        if: github.repository != 'grafana/writers-toolkit'
         run: |
           curl -s -Lo docs/docs.mk https://raw.githubusercontent.com/grafana/writers-toolkit/main/docs/docs.mk
           curl -s -Lo docs/make-docs https://raw.githubusercontent.com/grafana/writers-toolkit/main/docs/make-docs
